# broker-flow-prototype

./: .env.example  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  simple-dashboard.html  test-connection.html
backend/: analytics_engine.py  main.py  models.py  pdf_processor.py
data_generation/: pdf_generator.py
frontend/: analytics-data.json  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: BorrowerInsights.tsx  ConversionAnalytics.tsx  Dashboard.tsx  DocumentsSummary.tsx  ExecutiveSummary.tsx  PortfolioInsights.tsx  PropertyInsights.tsx
